# foqus-ml-task

./: .gitignore  .pre-commit-config.yaml  README.md  datasets.py  model.py  preview_task1_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py  transforms.py
.github/workflows/: ci.yml
foqus_ml_task/: cli.py  datasets.py  model.py  phantom.py  train.py  transforms.py
foqus_ml_task.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
report/exp1/: task3_best.pt  task3_curves.csv
report/figs/: task3_best.pt  task3_curves.csv
report/figs/exp1/: task3_best.pt  task3_curves.csv
tests/: conftest.py  test_model_shapes.py
